# SPICE_initial-scheduler

./: Dockerfile  README.md  dev.Dockerfile  pyproject.toml  requirements.txt
docs/: 01_infrastructure_setup.md  02_networking.md  03_monitoring.md  04_scheduler_configuration.md  05_benchmarking.md
docs/manifests/monitoring/: mub-monitor.yaml  thanos-query.yaml  thanos-receive.yaml
docs/scripts/: monitoring-install.sh
flashcrowd-mubench-config/: README.md  RunnerParameters.json  TrafficGeneratorParameters.json  workload_example.json
flashcrowd-mubench-config/variants/: extreme_flashcrowd.json  intense_flashcrowd.json  moderate_flashcrowd.json
specs/: apps.yaml  clusters.yaml
specs/apps/: app1.yaml  app2.yaml
specs/serviceGraphs/: app1.yaml  app2.yaml
src/salsa/: config_verification.py  main.py
src/salsa/config/: config.toml
src/salsa/core/actions/: actionMapper.py  agentAction.py  kubernetesExecutor.py
src/salsa/core/agents/: salsaAgent.py
src/salsa/core/env/: salsaEnv.py
src/salsa/core/globalCoordinator/: globalCoordinator.py  sharedReplayBuffer.py
src/salsa/core/rewardSystems/: salsaRewardSystem.py
src/salsa/core/states/: SLOState.py  agentObservation.py  clusterState.py  util.py  (+6 more)
src/salsa/entities/: application.py  cluster.py  dependencyGraph.py  microservice.py
src/salsa/sloViolationPredictor/: base_predictor.py  statistical_predictor.py
src/salsa/templates/: multicluster_service.yaml  propagation_policy.yaml
src/salsa/utils/: datastructures.py  sizeParser.py  typing.py  yaml_io.py
src/test/: test_karmadaInfo.py  test_thanos.py
(+5 files in other folders)
